[gd_scene load_steps=6 format=3 uid="uid://n5y8h1ny4h6r"]

[ext_resource type="Script" uid="uid://bnu2ks34dmqof" path="res://scenes/drones/MiningDrone.gd" id="1_5b6eq"]
[ext_resource type="Texture2D" uid="uid://d1s12nusq1u4t" path="res://assets/Gemini_Generated_Image_bums5ubums5ubums-removebg-preview.png" id="1_1180t"]
[ext_resource type="PackedScene" uid="uid://clv6xqtfgmqdp" path="res://scenes/ui/HealthBar.tscn" id="2_5b6eq"]
[ext_resource type="PackedScene" uid="uid://dahylcy6pufwi" path="res://scenes/ui/CargoBar.tscn" id="3_ocngy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_j14yy"]
radius = 25.0
height = 116.0

[node name="MiningDrone" type="CharacterBody2D"]
collision_layer = 2147483648
collision_mask = 524296
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_5b6eq")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -1.5707964
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_1180t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 0)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_j14yy")

[node name="BarsContainer" type="Node2D" parent="."]
position = Vector2(3, -191)

[node name="HealthBar" parent="BarsContainer" instance=ExtResource("2_5b6eq")]

[node name="CargoBar" parent="BarsContainer" instance=ExtResource("3_ocngy")]
offset_top = 8.0
offset_bottom = 12.0
